# Project-DA5402-MLOps-JAN26

./: .dvcignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MLproject  README.md  REPORT.md  SETUP.md  ai_declaration.md  conda.yaml  docker-compose.override.yml.example  docker-compose.test.yml  docker-compose.yml  dvc.yaml  openapi.yaml  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
airflow/: Dockerfile
airflow/dags/: training_pipeline.py
backend/: Dockerfile
backend/app/: config.py  main.py  schemas.py
backend/app/api/: admin.py  feedback.py  health.py  predict.py
backend/app/db/: models.py  session.py
backend/app/observability/: logging.py  metrics.py
backend/app/services/: drift.py  highlighter.py  model_client.py  notifier.py  retrainer.py
backend/tests/: test_api.py
backend/tests/integration/: test_http_client.py
contracts/: schemas.json  tone_enum.py
docs/: ARCHITECTURE.md  architecture.md  future-work.md  hld.md  lld.md  pipeline.md  test_plan.md  test_report.md  user_manual.md
docs/data/: label_mapping.md
docs/runbooks/: wave-1-data-agent.md
frontend/: Dockerfile  app.py  helpers.py
frontend/tests/: test_format.py
mlflow/: Dockerfile
model-server/: Dockerfile
monitoring/: config.yaml
monitoring/alertmanager/: config.yml
monitoring/grafana/dashboards/: api-health.json  ml-health.json  pa-detector.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
prompts/synthesize/: exemplars.json  system.md
scripts/: export_pyfunc.py  export_schemas.py
src/: evaluate.py  train.py
src/data/: clean.py  drift_baseline.py  ingest.py  label_map.py  sources.py  synthesize.py
src/features/: tokenize.py
src/models/: loss.py  multitask.py
tests/: test_drift.py  test_evaluate.py  test_schemas.py  test_smoke.py  test_train_smoke.py
tests/airflow/: test_dag.py
tests/data/: test_clean.py  test_drift_baseline.py  test_label_map.py  test_sources.py  test_synthesize.py
tests/models/: test_loss.py  test_multitask.py
